# boli

./: README.md  TODO.md
.github/workflows/: lint.yml
server/: .gitignore  Cargo.toml  README.md  build.rs  diesel.toml
server/migrations/2025-01-19-035728_create_translation/: down.sql  up.sql
server/proto/: boli.proto  helloworld.proto
server/src/: main.rs  models.rs  schema.rs  server.rs  service.rs
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/_components/: Button.tsx  Navigation.tsx
web/src/app/translations/: page.tsx
web/src/app/translations/_components/: TranslationCard.tsx
web/src/app/translations/_helpers/: index.ts
