[package]
name = "boli-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "boli-server"
path = "src/main.rs"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-reflection = "0.12.3"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

[build-dependencies]
tonic-build = "*"